# libnix

./: .cproject  .gitignore  .project  Makefile.defs  Makefile.gcc6  Makefile.in  README.md  configure  configure.in  mkstub  preplib  updatebases
defunc/: __fixsfsi.c  __floatunsidf.c
examples/: helloworld.c
libnix/: Makefile.in  configure  configure.in  libnix.texi
libnix/examples/: simpledev.c  simplelib.c
libnix/sources/: Makefile.in  history
libnix/sources/amiga/: Makefile.in
libnix/sources/headers/: bases.h  debuglib.h  dirent.h  libinit.h  pool.h  rand48.h  regparm.h  stabs.h  stdio.h  strsup.h
libnix/sources/math/: Makefile.in
libnix/sources/misc/: Makefile.in  detach.c
libnix/sources/nix/: Makefile.in
libnix_020_881_test/: Makefile  cpu_test.c
manifests/: bin  src
sources/: Makefile.in  history
sources/amiga/: Makefile.in
sources/headers/: amistdio.h  ctype.h  dirent.h  dlfcn.h  errno.h  fnmatch.h  libintl.h  semaphore.h  socket.h  stdio.h  stdlib.h  string.h  strsup.h
sources/math/: Makefile.in  steal.me
sources/misc/: Makefile.in  detach.c  swapstack.c
sources/nix/: Makefile.in
sources/nix13/: Makefile.in  steal.me
sources/nix20/: Makefile.in  steal.me
sources/nix_main/: Makefile.in  __nocommandline.c
sources/nixmain/: Makefile.in  __nocommandline.c  __stdiowin.c
sources/socket/: Makefile.in
sources/stack/: Makefile.in  stkrst.c  sub_d0_sp.c
sources/startup/: Makefile.in  devinit.c  init_shared.c  libinit.c  libinitr.c  nbcrt0.S  ncrt0.S  ncrt0.s  nlbcrt0.S  nlrcrt0.S  nrcrt0.S  xcrt0.S
sources/stubs/: Makefile.in
(+777 files in other folders)
