dnl Process this file with autoconf to produce a configure script.

AC_INIT()

AC_PROG_CC(CC, gcc, c1 cc)
AC_PROG_RANLIB
AC_CHECK_PROG(AR, ar, ar, ar)
AC_CHECK_PROG(AS, as, as, as)

AC_PROG_CPP(CC, gcc, c1 cc)
AC_PROG_AWK
AC_PROG_RANLIB(RANLIB, ranlib)
AC_PROG_INSTALL

AC_OUTPUT(Makefile
          sources/Makefile
          sources/amiga/Makefile
          sources/math/Makefile
          sources/misc/Makefile
          sources/nix/Makefile
          sources/nix13/Makefile
          sources/nix20/Makefile
          sources/nixmain/Makefile
          sources/nix_main/Makefile
          sources/socket/Makefile
          sources/stack/Makefile
          sources/startup/Makefile
          sources/stubs/Makefile
          examples/Makefile)
